# Investigating-Personalization-Effects-in-LLMs

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json
config/: README.md  inference.example.yaml  judge_smoke.yaml
docs/: FREE_AI_API_PROVIDERS.md  combination_analysis.md  experiments-usage.md  inference-usage.md  uv.md
docs/diagrams/: experiment-tech-overview-slide.tex
examples/: basic_usage.ipynb  batch_example.py  experiments_example.ipynb  inference_example.ipynb  llm_judge_example.ipynb  male.json  persona.json  run_experiment_matrix.py  run_inference_batch.py  run_inference_smoke.py  smoke_test.py
examples/backgrounds/: female.json
experiments/: background_persona.ipynb  background_persona_results.jsonl
src/generate_backgrounds/: README.md  __init__.py  __main__.py  cli.py  combination.py  dimension_templates.json  pipeline.py  rendering.py
src/generate_backgrounds/data/backgrounds/Age/: 20260413T221712.jsonl  20260420T180705.jsonl  age.jsonl
src/generate_backgrounds/data/backgrounds/Gender/: 20260413T221737.jsonl  gender.jsonl
src/generate_backgrounds/data/backgrounds/Race/: 20260413T221603.jsonl  race.jsonl
src/generate_backgrounds/data/backgrounds/Social_Status/: 20260413T221825.jsonl  social_status.jsonl
src/generate_backgrounds/dimension_value_mapping/: age.csv  country_region.csv  gender.csv  gender_name.csv  race.csv  social_status.csv
src/generate_backgrounds/dimension_value_mapping_test/: age.csv  gender.csv  race.csv  social_status.csv
src/inference/: __init__.py  batch.py  client.py  config.py  logging.py  providers.py  rate_limits.py  retry.py  types.py
src/inference/experiments/: __init__.py  csv_schema.py  dataframe.py  persistence.py  prompts.py  runner.py  scheduling.py  types.py
src/inference/judges/: __init__.py  adapters.py  csv_schema.py  log.py  parsing.py  persistence.py  prompts.py  runner.py  types.py
tests/: __init__.py  test_batch_resume.py  test_bg_combination.py  test_bg_partial_personas.py  test_bg_resume.py  test_client.py  test_config.py  test_csv_schema.py  test_experiment_persistence.py  test_experiment_runner.py  test_integration.py  test_judges_core.py  test_logging.py  test_public_api.py  test_rate_limits.py  test_retry.py  test_scaffold.py  test_scripts.py
tests/fixtures/: batch_requests.jsonl
